--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ executing==2.0.1
 ipykernel==6.29.4
 ipython==8.23.0
 jedi==0.19.1
+jupyter==1.0.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 matplotlib-inline==0.1.6
